--- a/scriptnet/locale/fr/LC_MESSAGES/django.po
+++ b/scriptnet/locale/fr/LC_MESSAGES/django.po
@@ -234,7 +234,7 @@ msgstr "Bienvenue dans"
 
 #: competitions/templates/competitions/master.html:68
 msgid "About"
-msgstr "A propos"
+msgstr "Â propos"
 
 #: competitions/templates/competitions/master.html:71
 msgid "Competitions"
@@ -269,13 +269,15 @@ msgstr "En savoir plus"
 
 #: competitions/templates/competitions/master.html:133
 msgid "About ScriptNet"
-msgstr "A propos de ScriptNet"
+msgstr "Â propos de ScriptNet"
 
 #: competitions/templates/competitions/master.html:139
 msgid ""
 "ScriptNet is a platform which hosts competitions related to Handwritten Text "
 "Recognition (HTR) and other Document Image Analysis (DIA) areas of research."
 msgstr ""
+"ScriptNet est une plateforme hébergeant des concours liées à la reconnaissance de manuscrite (HTR) "
+"et d'autres domaines d'analyse d'image de documents (DIA)." 
 
 #: competitions/templates/competitions/master.html:141
 msgid ""
@@ -284,10 +286,11 @@ msgid ""
 "printed documents, competing to produce the most accurate results.  "
 "Competitions often take place at well-known conferences like the "
 msgstr ""
+"Les concours de recherche sur l'analyse de documents souvent prennent lieu sous le cadre de colloques tels que la "
 
 #: competitions/templates/competitions/master.html:142
 msgid "International Conference on Document Analysis and Recognition (ICDAR)"
-msgstr ""
+msgstr "Conférence Internationale d'Analyse et Reconnaisance de Documents (International Conference on Document Analysis and Recognition, ICDAR)"
 
 #: competitions/templates/competitions/master.html:143
 msgid ""
@@ -295,55 +298,37 @@ msgid ""
 "improved through these competitions, making it possible for computers to "
 "process, read and search historical documents."
 msgstr ""
+" "
 
 #: competitions/templates/competitions/master.html:145
-#, fuzzy
-#| msgid ""
-#| "ScriptNet is a platform that hosts competitions related to Handwritten "
-#| "Text Recognition (HTR) and other Document Image Analysis (DIA) areas of "
-#| "research. It aims to attract as many research groups as possible to "
-#| "contribute to the task of unconstrained historical handwriting "
-#| "recognition. The main idea is to host several competitions in a common "
-#| "and uniform environment."
 msgid ""
 "ScriptNet aims to attract as many research groups as possible to contribute "
 "to the task of unconstrained historical handwriting recognition. The main "
 "idea is to host several competitions in a common and uniform environment."
 msgstr ""
-"ScriptNet est une plateforme qui accueille des concours liés à la "
-"reconnaissance d'écriture manuscite (HTR) et d'autres domaines d'analyse de "
-"l'image de documents (DIA). Il vise à attirer autant de groupes de recherche "
-"que possible pour contribuer à la tâche de la reconnaissance manuscrite. "
-"L'idée principale est d'accueillir plusieurs compétitions dans un "
-"environnement commun et uniforme. "
+"ScriptNet vise à attirer autant de groupes de recherche que possible pour contribuer à la tâche de la reconnaissance manuscrite. " 
+"L'idée principale est d'accueillir plusieurs compétitions dans un environnement commun et uniforme."
 
 #: competitions/templates/competitions/master.html:147
-#, fuzzy
-#| msgid ""
-#| "ScriptNet contains functionality which enables everyone to submit results "
-#| "anytime and get evaluation results, as well as ranking, automatically.  "
-#| "It is an initiative of the <b>READ EU funded project</b>, aiming to "
-#| "provide large datasets for stimulating research in HTR and related "
-#| "technologies."
 msgid ""
 "ScriptNet contains functionality which enables everyone to submit results "
 "<b>at any time</b> and get evaluation results, as well as ranking, "
 "automatically.  It is an initiative of the H2020 "
 msgstr ""
-"ScriptNet contient des fonctionnalités qui permettent à chaque participant "
-"de soumettre des résultats à tout moment et d'obtenir des résultats "
-"d'évaluation, ainsi que du classement, automatiquement. Il s'agit d'une "
-"initiative du projet READ, financé par l'UE, visant à fournir de grands "
-"ensembles de données pour stimuler la recherche sur le HTR et les "
-"technologies connexes. "
+"ScriptNet contient des fonctionnalités qui permettent à chaque participant de soumettre ses résultats "
+"à tout moment et d'obtenir ses évaluation, ainsi que son classement. "
+"Il s'agit d'une initiative du "
+
+#visant à fournir de grands ensembles "
+#"de données pour stimuler la recherche sur le HTR et les technologies connexes."
 
 #: competitions/templates/competitions/master.html:148
 msgid "project READ "
-msgstr ""
+msgstr "projet READ "
 
 #: competitions/templates/competitions/master.html:149
 msgid "(Recognition and Enrichment of Archival Documents)"
-msgstr ""
+msgstr "('Recognition and Enrichment of Archival Documents', sous l'égide de UE/Horizon 2020)."
 
 #: competitions/templates/competitions/master.html:163
 msgid "Active Document Understanding Competitions"
@@ -355,11 +340,11 @@ msgstr "*Pas de competitions en cours pour le moment*"
 
 #: competitions/templates/competitions/master.html:213
 msgid "Register to take part in one of the active competitions."
-msgstr "Inscrivez-vous pour prendre part à des competitions en cours"
+msgstr "Inscrivez-vous pour prendre part à des competitions en cours."
 
 #: competitions/templates/competitions/master.html:240
 msgid "Login with your credentials if you have already registered."
-msgstr "Identifiez-vous avec vos identifiants si vous etes deja inscrit"
+msgstr "Identifiez-vous avec vos identifiants si vous êtes déjà inscrit."
 
 #: competitions/templates/competitions/master.html:287
 #, fuzzy
